--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.3",
   "description": "Sky primitive using a simple (and fast) gradient away from the sun. For A-Frame WebXR.",
   "browser": "simple-sun-sky.js",
+  "files": ["simple-sun-sky.js"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "staging": "surge . https://aframe-simple-sun-sky.surge.sh/; true"
